<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/accueil_btn"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/titre_fragment1"
        android:checked="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/historique_btn"
        android:enabled="true"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/titre_activite2"
        android:checked="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gallerie_btn"
        android:enabled="true"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/titre_activite3"
        android:checked="false"
        app:showAsAction="ifRoom" />
</menu>