<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_preference"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.MyApp.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        style="@style/Widget.MyApp.Toolbar.Solid"
        android:layout_alignParentEnd="true"
        app:elevation="4dp" />

     <ListPreference
        android:defaultValue="fille"
        android:entries="@array/pref_sexe_titles"
        android:entryValues="@array/pref_sexe_values"
        android:key="sexe"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_sexe" />
    
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="nom"
        android:maxLines="1"
        android:maxLength="20"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="400"
        android:entries="@array/pref_sensibilite_titles"
        android:entryValues="@array/pref_sensibilite_values"
        android:key="sensibilite_micro"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_sensibilite_micro" />

</PreferenceScreen>
