<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pager_introduction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:text="@string/first_time_tittle"
        android:layout_centerInParent="true"
        android:layout_above="@+id/viewPagerIndicator"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        />

    <RelativeLayout
        android:id="@+id/viewPagerIndicator"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/viewPagerCountDots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="42dip"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dip"
            android:clickable="true"
            android:text="@string/continuer" />

        <TextView
            android:id="@+id/btn_retour"
            android:layout_width="42dip"
            android:layout_height="42dip"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dip"
            android:text="@string/retour"
            android:visibility="gone"
            />

    </RelativeLayout>

</RelativeLayout>