<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.MyApp.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        style="@style/Widget.MyApp.Toolbar.Solid"
        android:layout_alignParentEnd="true"
        app:elevation="4dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:backgroundTintMode="src_over"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="30dp"
        android:id="@+id/enregistrer_up_conteneur"
        android:background="@color/primary_color_light">

    <TextView
        android:id="@+id/tvMerci"
        android:text="@string/consigneRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tvVol"
        android:text="@string/vol"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:gravity="center_vertical"
        android:layout_below="@id/tvMerci"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"/>


<SeekBar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tvMerci"
    android:id="@+id/seek_volume"
    android:layout_toRightOf="@id/tvVol"
    android:layout_marginTop="34dp"
    android:progressTint="@color/color_accent"
    android:thumbTint="@color/color_accent"
    />
</RelativeLayout>

     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@id/enregistrer_up_conteneur"
        android:layout_marginTop="-29dp"
         android:paddingEnd="@dimen/activity_horizontal_margin"
        android:id="@+id/fab_conteneur">

         <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boutonFlottantEnregistrer"
        app:backgroundTint="@color/color_accent"
        android:src="@android:drawable/ic_input_add"
        app:elevation="12dp"
        app:borderWidth="0dp"
        android:clickable="true"
        android:onClick="onClick3"
        app:pressedTranslationZ="12dp"

        android:tint="@color/background_floating_material_dark"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/content_description_demarrer_enregistreent"
          android:layout_gravity="end"
            android:layout_alignParentTop="true"
        />
    </RelativeLayout>
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:layout_below="@id/fab_conteneur"
              >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_enregistrer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingTop="20dp"
        ></android.support.v7.widget.RecyclerView>



    </RelativeLayout>
    
</RelativeLayout>
